<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/item_summarized_post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="22dp"
        android:paddingTop="2dp"
        android:paddingEnd="22dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/tv_item_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_item_post_title"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_item_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_item_post_content"
            android:textColor="@color/colorTextContentGrey"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_item_post_time"
                android:textColor="@color/colorDarkGrey"
                android:textSize="11sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorLightGrey" />

            <TextView
                android:id="@+id/tv_item_post_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/tv_item_post_nickname"
                android:textColor="@color/colorDarkGrey"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/red_thumb_up" />

                <TextView
                    android:id="@+id/tv_item_post_like_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/tv_item_post_like_num"
                    android:textColor="@color/colorEveryTimeRed"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="7dp">
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/mint_comment" />

                <TextView
                    android:id="@+id/tv_item_post_comment_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/tv_item_post_comment_num"
                    android:textColor="@color/colorMint"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorLighterGrey" />


</LinearLayout>