<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <!--    tools:context=".src.boards.writing.WritingActivity">-->

    <LinearLayout
        android:id="@+id/linear_layout_writing_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/btn_updating_cancel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/btn_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/activity_updating_updating"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_updating_complete"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/btn_red"
            android:text="@string/activity_writing_btn_complete"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_updating_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/activity_writing_title_hint"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDarkGrey"
                android:textCursorDrawable="@drawable/cursor_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorLightGrey" />

            <EditText
                android:id="@+id/et_updating_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/activity_writing_content_hint"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDarkGrey"
                android:textCursorDrawable="@drawable/cursor_red"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>